Restored default 'test' task
1. Default 'test' task will run full test suite.
2. For CI builds (run on Github Actions) we've copied existing
   configuration to task 'citest' which will be run only from CI.
3. We've moved all dependencies to 'citest'
4. 'opensslTest' is still removed and incorporated into both
   'test' (as a part of full suite) and 'citest' (as a separate
   'sslTest' task)

Signed-off-by: Pawel Gudel <pawel.gudel@eliatra.com>